--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <!-- 결과 확인 페이지 -->
     <div class="result">
         <h2>결과 확인</h2>
-        <button onclick="showPDF('pdf/result_0_to_30.pdf')">0-30</button>
-        <button onclick="showPDF('pdf/result_40_to_70.pdf')">40-70</button>
-        <button onclick="showPDF('pdf/result_80_to_100.pdf')">80-100</button>
+        <button onclick="showPDF('https://github.com/joeunseam/DCA_TEST/blob/main/pdf/result_0_to_30.pdf')">0-30</button>
+        <button onclick="showPDF('https://github.com/joeunseam/DCA_TEST/blob/main/pdf/result_40_to_70.pdf')">40-70</button>
+        <button onclick="showPDF('https://github.com/joeunseam/DCA_TEST/blob/main/pdf/result_80_to_100.pdf')">80-100</button>
         <div class="pdf-viewer">
             <iframe id="pdf-frame" src="" frameborder="0"></iframe>
         </div>
@@ -73,7 +73,7 @@
             const result = document.getElementById('pdf-frame').src;
             const link = document.createElement('a');
             link.href = result;
-            link.download = 'pdf/result_0_to_30.pdf';
+            link.download = 'https://github.com/joeunseam/DCA_TEST/blob/main/pdf/result_0_to_30.pdf';
             link.click();
         }
 
