change pdf path

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             const result = document.getElementById('pdf-frame').src;
             const link = document.createElement('a');
             link.href = result;
-            link.download = 'https://github.com/joeunseam/DCA_TEST/blob/main/pdf/result_0_to_30.pdf';
+            link.download = 'pdf/result_0_to_30.pdf';
             link.click();
         }
 
