change pdf path with drive

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- 결과 확인 페이지 -->
     <div class="result">
         <h2>결과 확인</h2>
-        <button onclick="showPDF('https://github.com/joeunseam/DCA_TEST/blob/main/pdf/result_0_to_30.pdf')">0-30</button>
+        <button onclick="showPDF('https://drive.google.com/uc?export=download&id=1Puvflh-iprr6Uc-2_ERsqEZ6LWgXcCHi')">0-30</button>
         <button onclick="showPDF('https://github.com/joeunseam/DCA_TEST/blob/main/pdf/result_40_to_70.pdf')">40-70</button>
         <button onclick="showPDF('https://github.com/joeunseam/DCA_TEST/blob/main/pdf/result_80_to_100.pdf')">80-100</button>
         <div class="pdf-viewer">
@@ -73,7 +73,7 @@
             const result = document.getElementById('pdf-frame').src;
             const link = document.createElement('a');
             link.href = result;
-            link.download = 'pdf/result_0_to_30.pdf';
+            link.download = 'https://drive.google.com/uc?export=download&id=1Puvflh-iprr6Uc-2_ERsqEZ6LWgXcCHi';
             link.click();
         }
 
