change pdf to image

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>심리 테스트</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; }
-        .question, .result, .pdf-viewer, .test-section { display: none; margin: 20px 0; }
-        .pdf-viewer iframe { width: 100%; height: 500px; border: 1px solid #ccc; }
+        .question, .result, .image-viewer, .test-section { display: none; margin: 20px 0; }
+        .image-viewer img { width: 100%; max-width: 600px; }
         button { margin-top: 10px; padding: 10px; }
         .menu { margin-top: 50px; }
     </style>
@@ -24,14 +24,15 @@
     <!-- 결과 확인 페이지 -->
     <div class="result">
         <h2>결과 확인</h2>
-        <button onclick="showPDF('https://drive.google.com/uc?export=download&id=1Puvflh-iprr6Uc-2_ERsqEZ6LWgXcCHi')">0-30</button>
-        <button onclick="showPDF('https://github.com/joeunseam/DCA_TEST/blob/main/pdf/result_40_to_70.pdf')">40-70</button>
-        <button onclick="showPDF('https://github.com/joeunseam/DCA_TEST/blob/main/pdf/result_80_to_100.pdf')">80-100</button>
-        <div class="pdf-viewer">
-            <iframe id="pdf-frame" src="" frameborder="0"></iframe>
+        <!-- 이미지 파일 경로를 사용하여 결과 표시 -->
+        <button onclick="showImage('0-30')">0-30</button>
+        <button onclick="showImage('40-70')">40-70</button>
+        <button onclick="showImage('80-100')">80-100</button>
+        <div class="image-viewer">
+            <img id="result-image" src="" alt="심리 테스트 결과 이미지">
         </div>
-        <button id="download-btn" style="display:none;" onclick="downloadResult()">결과 다운로드</button>
-        <button id="print-btn" style="display:none;" onclick="printResult()">결과 인쇄</button>
+        <button id="download-btn" style="display:none;" onclick="downloadPDF()">결과 PDF 다운로드</button>
+        <button id="print-btn" style="display:none;" onclick="printPDF()">결과 인쇄</button>
         <button id="kakao-share-btn" style="display:none;" onclick="shareKakao()">카카오톡으로 결과 공유</button>
     </div>
 
@@ -49,6 +50,22 @@
         Kakao.init('c817ee8f357d0b759f84810124efd582'); // 실제 앱 키로 교체하세요.
         console.log(Kakao.isInitialized()); // 초기화 확인
 
+        // 이미지 파일 경로 설정
+        const imagePaths = {
+            '0-30': 'image/0_30.png',  // 결과 이미지 경로
+            '40-70': 'image/40_70.png',
+            '80-100': 'image/80_100.png'
+        };
+
+        // PDF 파일 경로 설정
+        const pdfPaths = {
+            '0-30': 'https://drive.google.com/uc?export=download&id=1Puvflh-iprr6Uc-2_ERsqEZ6LWgXcCHi',  // PDF 파일 경로
+            '40-70': 'pdf/result_40_to_70.pdf',
+            '80-100': 'https://drive.google.com/uc?export=download&id=1Puvflh-iprr6Uc-2_ERsqEZ6LWgXcCHi'
+        };
+
+        let currentResult = ''; // 현재 결과를 저장하는 변수
+
         // 초기 화면 설정
         function showResultPage() {
             document.querySelector('.menu').style.display = 'none';
@@ -61,47 +78,51 @@
             generateTestQuestions();
         }
 
-        function showPDF(pdfFile) {
-            document.getElementById('pdf-frame').src = pdfFile; // PDF 파일 임시 경로
-            document.querySelector('.pdf-viewer').style.display = 'block';
+        function showImage(resultKey) {
+            const imagePath = imagePaths[resultKey];
+            document.getElementById('result-image').src = imagePath;
+            document.querySelector('.image-viewer').style.display = 'block';
             document.getElementById('download-btn').style.display = 'block';
             document.getElementById('print-btn').style.display = 'block';
             document.getElementById('kakao-share-btn').style.display = 'block';
+            currentResult = resultKey; // 현재 결과 저장
         }
 
-        function downloadResult() {
-            const result = document.getElementById('pdf-frame').src;
+        function downloadPDF() {
+            const pdfLink = pdfPaths[currentResult];
             const link = document.createElement('a');
-            link.href = result;
-            link.download = 'https://drive.google.com/uc?export=download&id=1Puvflh-iprr6Uc-2_ERsqEZ6LWgXcCHi';
+            link.href = pdfLink;
+            link.download = `${currentResult}_result.pdf`;
             link.click();
         }
 
-        function printResult() {
-            const printFrame = document.getElementById('pdf-frame').contentWindow;
-            printFrame.focus();
-            printFrame.print();
+        function printPDF() {
+            const pdfLink = pdfPaths[currentResult];
+            const printWindow = window.open(pdfLink, '_blank');
+            printWindow.onload = function() {
+                printWindow.print();
+            };
         }
 
         function shareKakao() {
-            const result = '심리 테스트 결과를 확인하세요!';
+            const result = `심리 테스트 결과를 확인하세요! (${currentResult})`;
             Kakao.Share.sendDefault({
                 objectType: 'feed',
                 content: {
                     title: '심리 테스트 결과',
                     description: result,
-                    imageUrl: 'https://yourimageurl.com/image.jpg',  // 공유할 이미지 URL (optional)
+                    imageUrl: imagePaths[currentResult],  // 결과 이미지 사용
                     link: {
-                        mobileWebUrl: 'https://joeunseam.github.io/DCA_TEST/index.html',  // 모바일 웹 URL
-                        webUrl: 'https://joeunseam.github.io/DCA_TEST/index.html'  // 데스크탑 웹 URL
+                        mobileWebUrl: window.location.href,  // 현재 페이지의 고유 링크 사용
+                        webUrl: window.location.href  // 데스크탑 웹 URL
                     }
                 },
                 buttons: [
                     {
                         title: '결과 확인하기',
                         link: {
-                            mobileWebUrl: 'https://joeunseam.github.io/DCA_TEST/index.html',
-                            webUrl: 'https://joeunseam.github.io/DCA_TEST/index.html'
+                            mobileWebUrl: window.location.href,
+                            webUrl: window.location.href
                         }
                     }
                 ]
@@ -136,15 +157,15 @@
 
         function submitTest() {
             const correctAnswers = Object.keys(answers).filter(key => answers[key] === 3).length; // 예시로 정답을 3번 선택으로 설정
-            let resultPDF;
+            let resultKey;
             if (correctAnswers <= 3) {
-                resultPDF = 'pdf/result_0_to_30.pdf';
+                resultKey = '0-30';
             } else if (correctAnswers <= 7) {
-                resultPDF = 'https://github.com/joeunseam/DCA_TEST/blob/main/pdf/result_40_to_70.pdf';
+                resultKey = '40-70';
             } else {
-                resultPDF = 'https://drive.google.com/file/d/1Puvflh-iprr6Uc-2_ERsqEZ6LWgXcCHi/view?usp=sharing';
+                resultKey = '80-100';
             }
-            showPDF(resultPDF);
+            showImage(resultKey);
             document.querySelector('.test-section').style.display = 'none';
             document.querySelector('.result').style.display = 'block';
         }
