change pdf path

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
         // PDF 파일 경로 설정
         const pdfPaths = {
-            '0-30': 'https://drive.google.com/uc?export=download&id=1Puvflh-iprr6Uc-2_ERsqEZ6LWgXcCHi',  // PDF 파일 경로
+            '0-30': 'pdf/result_0_to_30.pdf',  // PDF 파일 경로
             '40-70': 'pdf/result_40_to_70.pdf',
-            '80-100': 'https://drive.google.com/uc?export=download&id=1Puvflh-iprr6Uc-2_ERsqEZ6LWgXcCHi'
+            '80-100': 'pdf/result_80_to_100.pdf'
         };
 
         let currentResult = ''; // 현재 결과를 저장하는 변수
