--- a/index.html
+++ b/index.html
@@ -65,6 +65,63 @@
         };
 
         let currentResult = ''; // 현재 결과를 저장하는 변수
+        const totalQuestions = 10; // 총 문제 수
+
+        // 문제, 선택지, 정답 설정
+        const questions = [
+            {
+                question: '다른 사람과 잘 어울리는 편인가요?',
+                choices: ['매우 그렇다', '그렇다', '보통이다', '아니다', '매우 아니다'],
+                correctAnswer: 1 // 정답 인덱스 (0부터 시작)
+            },
+            {
+                question: '어려운 문제를 해결하는 것을 좋아하나요?',
+                choices: ['매우 그렇다', '그렇다', '보통이다', '아니다', '매우 아니다'],
+                correctAnswer: 2
+            },
+            {
+                question: '어떤 일을 할 때 완벽하게 하려고 하나요?',
+                choices: ['매우 그렇다', '그렇다', '보통이다', '아니다', '매우 아니다'],
+                correctAnswer: 0
+            },
+            {
+                question: '모임에서 리더 역할을 자주 하나요?',
+                choices: ['매우 그렇다', '그렇다', '보통이다', '아니다', '매우 아니다'],
+                correctAnswer: 3
+            },
+            {
+                question: '계획을 세우고 실행하는 것을 좋아하나요?',
+                choices: ['매우 그렇다', '그렇다', '보통이다', '아니다', '매우 아니다'],
+                correctAnswer: 1
+            },
+            {
+                question: '새로운 것을 배우는 것을 좋아하나요?',
+                choices: ['매우 그렇다', '그렇다', '보통이다', '아니다', '매우 아니다'],
+                correctAnswer: 0
+            },
+            {
+                question: '감정을 잘 표현하는 편인가요?',
+                choices: ['매우 그렇다', '그렇다', '보통이다', '아니다', '매우 아니다'],
+                correctAnswer: 4
+            },
+            {
+                question: '여행을 자주 다니는 편인가요?',
+                choices: ['매우 그렇다', '그렇다', '보통이다', '아니다', '매우 아니다'],
+                correctAnswer: 1
+            },
+            {
+                question: '책을 자주 읽는 편인가요?',
+                choices: ['매우 그렇다', '그렇다', '보통이다', '아니다', '매우 아니다'],
+                correctAnswer: 3
+            },
+            {
+                question: '운동을 좋아하나요?',
+                choices: ['매우 그렇다', '그렇다', '보통이다', '아니다', '매우 아니다'],
+                correctAnswer: 0
+            }
+        ];
+
+        let answers = {}; // 사용자 답변 저장
 
         // 초기 화면 설정
         function showResultPage() {
@@ -159,30 +216,43 @@
         function generateTestQuestions() {
             const testContainer = document.getElementById('test-container');
             testContainer.innerHTML = '';
-            for (let i = 1; i <= 10; i++) {
+
+            questions.forEach((questionObj, index) => {
                 const questionDiv = document.createElement('div');
                 questionDiv.classList.add('question');
-                questionDiv.innerHTML = `<p>${i}. 임시 질문 ${i}의 선택지를 고르세요:</p>`;
-                for (let j = 1; j <= 5; j++) {
-                    questionDiv.innerHTML += `<button onclick="selectAnswer(${i}, ${j})">선택지 ${j}</button> `;
-                }
+                questionDiv.innerHTML = `<p>${index + 1}. ${questionObj.question}</p>`;
+                questionObj.choices.forEach((choice, choiceIndex) => {
+                    questionDiv.innerHTML += `<button onclick="selectAnswer(${index}, ${choiceIndex})">${choice}</button> `;
+                });
                 testContainer.appendChild(questionDiv);
-            }
-            document.getElementById('submit-test').style.display = 'block';
+            });
+
+            document.querySelectorAll('.question')[0].style.display = 'block'; // 첫 번째 질문 표시
         }
 
-        let answers = {}; // 사용자 답변 저장
-
-        function selectAnswer(questionNumber, answer) {
-            answers[questionNumber] = answer;
+        function selectAnswer(questionNumber, answerIndex) {
+            answers[questionNumber] = answerIndex;
+            // 각 문제마다 사용자가 선택지를 선택하면 다음 문제로 이동하도록 설정
+            if (questionNumber + 1 < totalQuestions) {
+                document.querySelectorAll('.question')[questionNumber].style.display = 'none';
+                document.querySelectorAll('.question')[questionNumber + 1].style.display = 'block';
+            } else {
+                document.getElementById('submit-test').style.display = 'block'; // 마지막 문제 이후에는 제출 버튼을 표시
+            }
         }
 
         function submitTest() {
-            const correctAnswers = Object.keys(answers).filter(key => answers[key] === 3).length; // 예시로 정답을 3번 선택으로 설정
+            let score = 0;
+            for (let i = 0; i < totalQuestions; i++) {
+                if (answers[i] === questions[i].correctAnswer) {
+                    score += 10; // 정답당 10점씩 부여
+                }
+            }
+
             let resultKey;
-            if (correctAnswers <= 3) {
+            if (score <= 30) {
                 resultKey = '0-30';
-            } else if (correctAnswers <= 7) {
+            } else if (score <= 70) {
                 resultKey = '40-70';
             } else {
                 resultKey = '80-100';
