add return button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         .image-viewer img { width: 100%; max-width: 600px; }
         button { margin-top: 10px; padding: 10px; }
         .menu { margin-top: 50px; }
+        .navigation-buttons { margin-top: 20px; }
     </style>
 </head>
 <body>
@@ -31,6 +32,10 @@
         <div class="image-viewer">
             <img id="result-image" src="" alt="심리 테스트 결과 이미지">
         </div>
+        <div class="navigation-buttons">
+            <button id="back-btn" onclick="goBack()">이전 페이지로 돌아가기</button>
+            <button id="home-btn" style="display:none;" onclick="goHome()">홈으로 돌아가기</button>
+        </div>
         <button id="download-btn" style="display:none;" onclick="downloadPDF()">결과 PDF 다운로드</button>
         <button id="print-btn" style="display:none;" onclick="printPDF()">결과 인쇄</button>
         <button id="kakao-share-btn" style="display:none;" onclick="shareKakao()">카카오톡으로 결과 공유</button>
@@ -40,6 +45,9 @@
     <div class="test-section">
         <h2>심리 테스트</h2>
         <div id="test-container"></div>
+        <div class="navigation-buttons">
+            <button id="back-btn-test" onclick="goBack()">이전 페이지로 돌아가기</button>
+        </div>
         <button id="submit-test" style="display:none;" onclick="submitTest()">결과 제출</button>
     </div>
 
@@ -66,8 +74,6 @@
 
         let currentResult = ''; // 현재 결과를 저장하는 변수
         const totalQuestions = 10; // 총 문제 수
-
-        // 문제, 선택지, 정답 설정
         const questions = [
             {
                 question: '다른 사람과 잘 어울리는 편인가요?',
@@ -148,6 +154,8 @@
             document.getElementById('download-btn').style.display = 'block';
             document.getElementById('print-btn').style.display = 'block';
             document.getElementById('kakao-share-btn').style.display = 'block';
+            document.getElementById('home-btn').style.display = 'block'; // 홈으로 돌아가기 버튼 표시
+            document.getElementById('back-btn').style.display = 'none'; // 이전 버튼 숨김
             currentResult = resultKey; // 현재 결과 저장
             updateURL(resultKey); // URL 업데이트
         }
@@ -260,6 +268,16 @@
             showImage(resultKey);
             document.querySelector('.test-section').style.display = 'none';
             document.querySelector('.result').style.display = 'block';
+        }
+
+        // 홈으로 돌아가기 버튼 기능
+        function goHome() {
+            window.location.href = window.location.origin + window.location.pathname; // 홈으로 이동
+        }
+
+        // 이전 페이지로 돌아가기 버튼 기능
+        function goBack() {
+            window.history.back(); // 이전 페이지로 이동
         }
     </script>
 </body>
