- one home button

--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
         <div class="image-viewer">
             <img id="result-image" src="" alt="심리 테스트 결과 이미지">
         </div>
-        <div class="navigation-buttons">
-            <button id="home-btn" onclick="goHome()">홈으로 돌아가기</button>
-        </div>
+        <!-- 홈으로 돌아가기 버튼을 제거 -->
         <button id="download-btn" style="display:none;" onclick="downloadPDF()">결과 PDF 다운로드</button>
         <button id="print-btn" style="display:none;" onclick="printPDF()">결과 인쇄</button>
         <button id="kakao-share-btn" style="display:none;" onclick="shareKakao()">카카오톡으로 결과 공유</button>
