--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
         .navigation-buttons { 
             margin-top: 20px; 
         }
+        
+        /* 진행 상태 표시 바 스타일 */
+        .progress-container {
+            width: 80%;
+            background-color: #f3f3f3;
+            border-radius: 25px;
+            margin: 20px auto;
+        }
+        
+        .progress-bar {
+            height: 30px;
+            width: 0%;
+            background-color: #4caf50;
+            text-align: center;
+            line-height: 30px;
+            color: white;
+            border-radius: 25px;
+        }
     </style>
 </head>
 <body class="home-background"> <!-- 기본적으로 홈 페이지 배경을 설정 -->
@@ -85,6 +103,10 @@
     <!-- 심리 테스트 섹션 -->
     <div class="test-section">
         <h2>심리 테스트</h2>
+        <!-- 진행 상태 표시 바 -->
+        <div class="progress-container">
+            <div id="progress-bar" class="progress-bar">0%</div>
+        </div>
         <div id="test-container"></div>
         <button id="submit-test" style="display:none;" onclick="submitTest()">결과 제출</button>
     </div>
@@ -112,6 +134,7 @@
 
         let currentResult = ''; // 현재 결과를 저장하는 변수
         const totalQuestions = 10; // 총 문제 수
+        let currentQuestionIndex = 0; // 현재 질문 인덱스
         const questions = [
             {
                 question: '다른 사람과 잘 어울리는 편인가요?',
@@ -179,6 +202,7 @@
             document.querySelector('.menu').style.display = 'none';
             document.querySelector('.test-section').style.display = 'block';
             generateTestQuestions();
+            updateProgressBar(); // 초기 진행 상태 업데이트
         }
 
         // URL 파라미터로 결과 표시
@@ -283,8 +307,11 @@
             if (questionNumber + 1 < totalQuestions) {
                 document.querySelectorAll('.question')[questionNumber].style.display = 'none';
                 document.querySelectorAll('.question')[questionNumber + 1].style.display = 'block';
+                currentQuestionIndex++; // 현재 질문 인덱스 업데이트
+                updateProgressBar(); // 진행 상태 업데이트
             } else {
                 document.getElementById('submit-test').style.display = 'block'; // 마지막 문제 이후에는 제출 버튼을 표시
+                updateProgressBar(); // 마지막 질문 진행 상태 업데이트
             }
         }
 
@@ -309,12 +336,22 @@
             document.querySelector('.result').style.display = 'block';
         }
 
+        // 진행 상태 업데이트 함수
+        function updateProgressBar() {
+            const progressBar = document.getElementById('progress-bar');
+            const progressPercentage = ((currentQuestionIndex + 1) / totalQuestions) * 100;
+            progressBar.style.width = progressPercentage + '%';
+            progressBar.innerText = Math.round(progressPercentage) + '%';
+        }
+
         // 홈으로 돌아가기 버튼 기능
         function goHome() {
             document.body.className = 'home-background'; // 홈 페이지 배경 설정
             document.querySelector('.result').style.display = 'none';
             document.querySelector('.test-section').style.display = 'none';
             document.querySelector('.menu').style.display = 'block';
+            currentQuestionIndex = 0; // 진행 상태 초기화
+            updateProgressBar(); // 진행 상태 바 초기화
         }
     </script>
 </body>
