--- a/index.html
+++ b/index.html
@@ -471,7 +471,6 @@
             font-size: 1em;
             /* 너비를 자동으로 설정하거나 필요에 따라 조정 */
             /* width: 200px; */ 
-            //height: 100%;
         }
 
         .home-button:hover {
@@ -526,9 +525,15 @@
 
             /* footer-buttons 조정 */
             .footer-buttons {
-                flex-direction: row;
-                justify-content: space-between;
-                width: 100%;
+                flex-direction: column; /* 버튼을 수직으로 배치 */
+                align-items: stretch; /* 버튼을 컨테이너 너비에 맞춤 */
+                gap: 10px; /* 버튼 간 간격 */
+            }
+
+            /* 버튼 전체 너비 조정 */
+            .footer-buttons .home-button,
+            .footer-buttons #submit-test {
+                width: 100%; /* 버튼을 컨테이너 너비에 맞춤 */
             }
         }
 
@@ -760,7 +765,7 @@
         ];
 
         // 타이머 관련 변수
-        const timerDuration = 30; // 5분 (초 단위)
+        const timerDuration = 5 * 60; // 5분 (초 단위)
         let remainingTime = timerDuration;
         let timerInterval = null;
         let timerOn = true;
