--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             justify-content: space-between; /* 버튼들을 양쪽 끝으로 배치 */
             width: 80%; /* 버튼 컨테이너 너비를 긴 선과 맞춤 */
             margin: 20px auto; /* 중앙 정렬 */
+            gap: 20px; /* 버튼 간 간격 추가 */
         }
 
         .button {
@@ -177,58 +178,48 @@
             padding: 0; /* 패딩 제거 */
             cursor: pointer;
             transition: background-color 0.3s;
-            height: 40px; /* 버튼 높이 */
+            height: 40px; /* 버튼 높이 유지 */
             position: relative; /* 호버 효과를 위한 상대 위치 설정 */
         }
 
-        .button.left {
-            flex-direction: row; /* 가로 방향으로 정렬 */
-            width: 150px; /* 버튼의 너비 */
+        /* 버튼 너비 확대 */
+        .button.left, .button.right {
+            width: 200px; /* 버튼의 너비 증가 */
         }
 
-        .left-arrow {
-            width: 40%; /* 왼쪽 화살표 영역 비율 */
+        /* 화살표 및 텍스트 중앙 정렬 */
+        .button .arrow, .button .text {
+            flex: 3 3 0%; /* 화살표 칸 비율 3 */
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: transparent; /* 기본 배경색 */
+        }
+
+        .button .text {
+            flex: 7 7 0%; /* 텍스트 칸 비율 7 */
+        }
+
+        /* 화살표 클래스 */
+        .arrow {
+            font-size: 18px; /* 화살표 크기 조정 */
             transition: background-color 0.3s; /* 호버 시 배경 변화 효과 */
         }
 
-        .button.left:hover .left-arrow {
-            background-color: #d3d3d3; /* 버튼 전체 호버 시 화살표 부분 호버 시 회색으로 변경 */
+        /* 텍스트 클래스 */
+        .text {
+            font-size: 14px; /* 텍스트 크기 조정 */
         }
 
+        /* 구분선 스타일 */
         .separator {
-            border-left: 2px solid black; /* 검은색 구분선 */
+            width: 2px;
+            background-color: black;
             height: 100%; /* 버튼 높이에 맞춤 */
         }
 
-        .right-button {
-            display: flex;
-            flex-direction: row; /* 가로 방향으로 정렬 */
-            width: 150px; /* 버튼의 너비 */
-        }
-
-        .right-text {
-            width: 60%; /* 오른쪽 텍스트 영역 비율 */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 12px; /* 글자 크기 조정 */
-        }
-
-        .right-arrow {
-            width: 40%; /* 오른쪽 화살표 영역 비율 */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: transparent; /* 기본 배경색 */
-            transition: background-color 0.3s; /* 호버 시 배경 변화 효과 */
-        }
-
-        .button.right:hover .right-arrow {
-            background-color: #d3d3d3; /* 회색으로 변경 */
+        /* 호버 효과: 버튼 전체에 마우스를 올렸을 때 화살표 칸 배경색 변경 */
+        .button:hover .arrow {
+            background-color: #d3d3d3; /* 화살표 칸 배경색 회색으로 변경 */
         }
 
         .footer {
@@ -490,14 +481,16 @@
 
             .button-container {
                 width: 90%; /* 버튼 컨테이너 너비 */
+                gap: 10px; /* 버튼 간 간격 */
             }
 
             .button {
-                height: 40px; /* 버튼 높이 */
+                height: 40px; /* 버튼 높이 유지 */
             }
 
+            /* 모바일에서 버튼 너비 확대 */
             .button.left, .button.right {
-                width: 130px; /* 버튼 너비 */
+                width: 160px; /* 버튼 너비 증가 */
             }
 
             .test-section .option-button {
@@ -558,6 +551,7 @@
             align-items: center; /* 버튼들을 수직 중앙에 맞춤 */
             width: 100%; /* 전체 너비 사용 */
             margin-top: 20px;
+            gap: 20px; /* 버튼 간 간격 추가 */
         }
 
         /* 테스트 섹션 내 홈 버튼 위치 조정 */
@@ -601,23 +595,17 @@
 
         <!-- 버튼 컨테이너 -->
         <div class="button-container">
+            <!-- 점수 확인하기 버튼 -->
             <div class="button left" onclick="showResultSelectionPage()">
-                <div class="left-arrow">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M15 18l-6-6 6-6" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                </div> <!-- 왼쪽 화살표 -->
+                <div class="arrow">&larr;</div> <!-- 왼쪽 화살표 문자로 변경 -->
                 <div class="separator"></div> <!-- 검은색 구분선 -->
-                <div class="right-text">점수 확인하기</div> <!-- 텍스트 변경 가능 -->
+                <div class="text">점수 확인하기</div> <!-- 텍스트 변경 가능 -->
             </div>
+            <!-- 시험 응시하기 버튼 -->
             <div class="button right" onclick="startTest()">
-                <div class="right-button">
-                    <div class="right-text">시험 응시하기</div> <!-- 버튼 텍스트 -->
-                    <div class="separator" style="border-left: 2px solid black; height: 40px;"></div> <!-- 오른쪽 구분선 -->
-                    <div class="right-arrow">
-                        &gt; <!-- 화살표 기호 -->
-                    </div>
-                </div>
+                <div class="text">시험 응시하기</div> <!-- 텍스트 변경 가능 -->
+                <div class="separator"></div> <!-- 검은색 구분선 -->
+                <div class="arrow">&rarr;</div> <!-- 오른쪽 화살표 문자로 변경 -->
             </div>
         </div>
 
